hide exercise solution

--- a/data_leakage.ipynb
+++ b/data_leakage.ipynb
@@ -580,19 +580,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "for train_ind, val_ind in KFold().split(X_train2):\n",
+    "<details>\n",
+    "    <summary>Answer</summary>\n",
+    "\n",
+    "<code>for train_ind, val_ind in KFold().split(X_train2):\n",
     "    train = X_train2[train_ind, :]\n",
     "    val = X_train2[val_ind, :]\n",
     "    target_train = y_train2[train_ind]\n",
     "    target_val = y_train2[val_ind]\n",
-    "    # Fit the scaler\n",
     "    ss = StandardScaler().fit(train)\n",
     "    train_scld = ss.transform(train)\n",
     "    val_scld = ss.transform(val)\n",
-    "    # Fit the regression\n",
     "    lr = LinearRegression().fit(train_scld, target_train)\n",
-    "    print(lr.coef_[0])"
+    "    print(lr.coef_[0])</code>\n",
+    "</details>"
    ]
   },
   {
