--- a/data_leakage.ipynb
+++ b/data_leakage.ipynb
@@ -215,7 +215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gun_poll = pd.read_csv('/Users/gdamico/flatiron/data/poll-quiz-guns/guns-polls.csv')"
+    "gun_poll = pd.read_csv('data/guns-polls.csv')"
    ]
   },
   {
