fix scaling error

--- a/data_leakage.ipynb
+++ b/data_leakage.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_test2_hat = lr2.predict(X_test2)\n",
+    "y_test2_hat = lr2.predict(X_test2_scld)\n",
     "mse = mean_squared_error(y_test2, y_test2_hat)\n",
     "print(f\"Our test RMSE for this model is {round(np.sqrt(mse), 2)}.\")"
    ]
