add back error comparison and add plot titles

--- a/data_leakage.ipynb
+++ b/data_leakage.ipynb
@@ -170,6 +170,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that our model coefficients are slightly different from what they were before."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Error Comparison\n",
+    "\n",
+    "It's worth pointing out that, **for linear models**, there is **no** difference in modeling error:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test_hat = lr.predict(X_test)\n",
+    "mse = mean_squared_error(y_test, y_test_hat)\n",
+    "print(f\"Our test RMSE for this model is {round(np.sqrt(mse), 2)}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test2_hat = lr2.predict(X_test2_scld)\n",
+    "mse = mean_squared_error(y_test2, y_test2_hat)\n",
+    "print(f\"Our test RMSE for this model is {round(np.sqrt(mse), 2)}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This will **not** be true for other sorts of models that use different loss functions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Preprocessing"
    ]
   },
@@ -577,6 +622,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### A Contrived But Illustrative Example\n",
+    "\n",
     "This is only a slight difference in coefficients, but for other datasets the difference can be great."
    ]
   },
@@ -664,7 +711,9 @@
     "y = lr.coef_ * X + lr.intercept_\n",
     "\n",
     "ax.scatter(df['pred'], df['target'])\n",
-    "ax.plot(X, y);"
+    "ax.plot(X, y)\n",
+    "ax.set_title(f\"\"\"The best-fit line when scaling the whole dataset is\n",
+    "    {round(lr.coef_[0])}X + {round(lr.intercept_)}\"\"\");"
    ]
   },
   {
@@ -710,7 +759,9 @@
     "y = lr2.coef_ * X + lr2.intercept_\n",
     "\n",
     "ax.scatter(df['pred'], df['target'])\n",
-    "ax.plot(X, y);"
+    "ax.plot(X, y)\n",
+    "ax.set_title(f\"\"\"The best-fit line when scaling after splitting is\n",
+    "    {round(lr2.coef_[0])}X + {round(lr2.intercept_)}\"\"\");"
    ]
   },
   {
